# potluckctf

./: .gitmodules  README.md  notes.txt
ansible/: Makefile  README.md  ansible.cfg  challenges-playbook.yml  dev-playbook.yml  potluckctf-playbook.yml
challenge-delivery/: form-notification.gs  notes.txt
challenge-deployment/: Makefile  ctf.yml  template.Makefile
challenges/: README.md
challenges/challenge-04/challenge/crates/charming-circuit-challenge/: Cargo.toml
challenges/challenge-04/challenge/crates/charming-circuit-challenge/assets/: static_camera.transform.ron  world.wirelang
challenges/challenge-04/challenge/crates/charming-circuit-challenge/assets/materials/: cube.mat.ron  edge_active1.mat.ron  edge_active2.mat.ron  edge_double_active.mat.ron  edge_inactive.mat.ron  edge_overactive1.mat.ron  edge_overactive2.mat.ron  edges.mat.ron  glass.mat.ron  node_active.mat.ron  node_active_next2.mat.ron  node_active_next3.mat.ron  node_active_next4.mat.ron  node_inactive1.mat.ron  node_inactive2.mat.ron  node_inactive3.mat.ron  node_inactive4.mat.ron  nodes.mat.ron
challenges/challenge-04/challenge/crates/charming-circuit-challenge/assets/models/: signpost.glb
challenges/challenge-04/challenge/crates/charming-circuit-challenge/assets/scenes/: sign.scn.ron
challenges/challenge-04/challenge/crates/charming-circuit-challenge/assets/shaders/: ourmaterial.wgsl
challenges/challenge-04/challenge/crates/charming-circuit-challenge/assets/textures/: make_edges.py  make_nodes.py
challenges/challenge-04/challenge/crates/charming-circuit-challenge/src/: capless_cylinder.rs  character.rs  main.rs  map.rs  map_sync.rs  material.rs  material_properties.rs  sign.rs  simulation.rs  static_transform.rs  ui.rs  util.rs  wirelang.rs
challenges/challenge-04/challenge/crates/wirelang/: Cargo.toml
challenges/challenge-04/challenge/crates/wirelang/examples/: interpret.rs  parse.rs
challenges/challenge-04/challenge/crates/wirelang/src/: ast.rs  grammar.lalrpop  interpret.rs  lexer.rs  lib.rs
challenges/challenge-17/cookmaster/controller/controller/: .rustfmt.toml  Cargo.toml
challenges/challenge-17/cookmaster/controller/controller/src/: main.rs
challenges/challenge-17/cookmaster/controller/ecsimple/: .gitignore  Cargo.toml  README.md
challenges/challenge-17/cookmaster/controller/ecsimple/src/: bngf2m.rs  consts.rs  ecasn1.rs  errors.rs  fileop.rs  group.rs  keys.rs  lib.rs  logger.rs  mont.rs  point.rs  randop.rs  signature.rs  utils.rs
challenges/challenge-29/challenge/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  server.py  solve.py
challenges/challenge-29/challenge/src/: constants.rs  firmware.rs  intrinsics.rs  peripheral.rs  rehost.rs  rng.rs  secret.rs
grafana/: dashboard.json
hacks/: backup-notes.txt  clear-scoreboard-cache.sh  config-challenge-docker.sh  iap-connect-scoreboard.sh  start-competition.sh  watflag-setup.txt
scoreboard/: convert-scoreboard.py  scoreboard-filtered.csv  scoreboard.csv  scoreboard.json
scripts/: check-undelivered.sh  connect-challenge.sh  connect-monitor.sh  connect-scoreboard.sh  (+1 more)
(+454 files in other folders)
