[package]
name = "wirelang"
version = "0.1.0"
edition = "2021"

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
logos = "0.13.0"
lalrpop-util = "0.20.0"
atty = "0.2.14"
glam = "0.24.2"
fnv = "1.0.7"
color-eyre = "0.6.2"
map = { path = "../map" }
bincode = "1.3.3"

[build-dependencies]
lalrpop = "0.20.0"
